--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<title>Visualize by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/reset.css">
+		<link rel="stylesheet" href="C:/Users/paper/Desktop/templated-visualize/assets/css/reset.css">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200i,300,300i,400,400i" rel="stylesheet">
-		<link rel="stylesheet" href="fontello-bcf36fd2/css/fontello.css">
-		<link rel="stylesheet" href="assets/css/main2.css" />
+		<link rel="stylesheet" href="C:/Users/paper/Desktop/templated-visualize/fontello-bcf36fd2/css/fontello.css">
+		<link rel="stylesheet" href="C:/Users/paper/Desktop/templated-visualize/assets/css/main2.css" />
 	</head>
 	<body>
 
