--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<title>Visualize by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="C:/Users/paper/Desktop/templated-visualize/assets/css/reset.css">
+		<link rel="stylesheet" href="file:///C:/Users/paper/Desktop/templated-visualize/assets/css/reset.css">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200i,300,300i,400,400i" rel="stylesheet">
-		<link rel="stylesheet" href="C:/Users/paper/Desktop/templated-visualize/fontello-bcf36fd2/css/fontello.css">
-		<link rel="stylesheet" href="C:/Users/paper/Desktop/templated-visualize/assets/css/main2.css" />
+		<link rel="stylesheet" href="file:///C:/Users/paper/Desktop/templated-visualize/fontello-bcf36fd2/css/fontello.css">
+		<link rel="stylesheet" href="file:///C:/Users/paper/Desktop/templated-visualize/assets/css/main2.css" />
 	</head>
 	<body>
 
@@ -40,8 +40,8 @@
 								<div>
 								
 								
-                                    <a href="C:/Users/paper/Desktop/templated-visualize/images/fulls/01.jpg">
-                                    <img src="C:/Users/paper/Desktop/templated-visualize/images/thumbs/01.jpg" alt="" />
+                                    <a href="file:///C:/Users/paper/Desktop/templated-visualize/images/fulls/01.jpg">
+                                    <img src="file:///C:/Users/paper/Desktop/templated-visualize/images/thumbs/01.jpg" alt="" />
                                     <h3>Lorem ipsum dolor sit amet</h3>
 									</a>
 									<a href="images/fulls/02.jpg">
