--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<title>Visualize by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="https://github.com/lynn1com/seungbok.lee/assets/css/reset.css">
+		<link rel="stylesheet" href="assets/css/reset.css">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200i,300,300i,400,400i" rel="stylesheet">
-		<link rel="stylesheet" href="https://github.com/lynn1com/seungbok.lee/fontello-bcf36fd2/css/fontello.css">
-		<link rel="stylesheet" href="https://github.com/lynn1com/seungbok.lee/assets/css/main2.css" />
+		<link rel="stylesheet" href="fontello-bcf36fd2/css/fontello.css">
+		<link rel="stylesheet" href="assets/css/main2.css" />
 	</head>
 	<body>
 
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="https://github.com/lynn1com/seungbok.lee/images/avatar.jpg" alt="" /></span>
+						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h1>This is <strong>Visualize</strong>, a responsive site template designed by <a href="http://templated.co">TEMPLATED</a><br />
 						and released for free under the Creative Commons License.</h1>
 						<ul class="icons">
@@ -40,8 +40,8 @@
 								<div>
 								
 								
-                                    <a href="file:///C:/Users/paper/Desktop/templated-visualize/images/fulls/01.jpg">
-                                    <img src="file:///C:/Users/paper/Desktop/templated-visualize/images/thumbs/01.jpg" alt="" />
+                                    <a href="images/fulls/01.jpg">
+                                    <img src="images/thumbs/01.jpg" alt="" />
                                     <h3>Lorem ipsum dolor sit amet</h3>
 									</a>
 									<a href="images/fulls/02.jpg">
